# AmpRob_LabMR

./: README.md  aestrella.m  dijkstra.m  nav_autonoma.m  nav_autonoma.mlx  plantilla_campos_potenciales.m
seg_tray/: CMakeLists.txt  package.xml
seg_tray/launch/: corr_nav_launch_wall.py
seg_tray/src/: corr_nav.cpp  corr_nav_wall.cpp  nav_p2p.cpp
seg_tray/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
seg_tray_msgs/: CMakeLists.txt  package.xml
seg_tray_msgs/srv/: CornerService.srv
